<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_sharp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/overlay_popup_short_text"
        android:textColor="#000000"
        android:textSize="15sp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_yes"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_no"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>